@@ -1,4 +1,5 @@
-add_library(fost-sinks SHARED
+add_library(fost-sinks
+        linelogger.cpp
         panoptes.cpp
         panoptes.pathname.cpp
         sinks.cpp
