@@ -1,3 +1,6 @@
+2018-07-09  Kirit Saelensminde  <kirit@felspar.com>
+ Add a logger that outputs single lines of JSON to the console.
+
 2018-07-06  Kirit Saelensminde  <kirit@felspar.com>
  * Use guids to generate temporary file names.
  * Fix a potential problem with the pathname join function one of the paths is empty.
